style: fix border radius and spacings in (video,playlist) card and player

--- a/apps/web/src/app/shared/components/video-card/video-card.component.scss
+++ b/apps/web/src/app/shared/components/video-card/video-card.component.scss
@@ -54,14 +54,13 @@
       object-fit: cover;
       aspect-ratio: 16/9;
       margin-bottom: variables.$spacing-normal;
-      border-radius: calc(variables.$radius-round / 2);
+      border-radius: 12px;
     }
   }
   > .video-card-info {
-    display: flex;
-    gap: variables.$spacing-sm;
-    align-items: flex-start;
-    padding-right: variables.$spacing-lg;
+    display: grid;
+    gap: calc(variables.$spacing-sm + 4px);
+    grid-template-columns: 36px 1fr 36px;
 
     .video-card-img {
       flex-shrink: 0;
@@ -103,6 +102,13 @@
           color: var(--link-hovered);
         }
       }
+    }
+
+    .options-button {
+      width: 34px;
+      height: 34px;
+      aspect-ratio: 1;
+      color: inherit;
     }
   }
 }
